--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==8.0.0
+attrs==19.3.0
 certifi==2020.4.5.2
 chardet==3.0.4
 click==7.1.2
@@ -6,16 +7,22 @@ dnspython==1.16.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.8
+gunicorn==20.0.4
 idna==2.9
+importlib-metadata==1.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonmerge==1.7.0
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 marshmallow==3.5.2
 pkg-resources==0.0.0
 pymongo==3.10.1
+pyrsistent==0.16.0
 python-dotenv==0.13.0
 pytz==2020.1
 requests==2.23.0
 six==1.14.0
 urllib3==1.25.9
 Werkzeug==1.0.1
+zipp==3.1.0
